# http-client-example

./: Cargo.toml
src/: http_client.rs  main.rs
