[package]
name = "http-client-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-curl = "0.1.7"
async-trait = "0.1.73"
curl = "0.4.44"
http = "0.2.9"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
